--- a/package.json
+++ b/package.json
@@ -11,5 +11,17 @@
   },
   "keywords": [],
   "author": "Kaito",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dayjs": "^1.11.13",
+    "semistandard": "^17.0.0",
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4"
+  },
+  "devDependencies": {
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.3",
+    "style-loader": "^4.0.0",
+    "webpack-dev-server": "^5.1.0"
+  }
 }
